// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIToast should render a message when messages are passed as props 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  data-automationid={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  <p
    className="xui-toast--message"
    data-automationid={undefined}
  >
    Content
  </p>
</div>
`;

exports[`XUIToast should render a passed qaHook as an automation id 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  data-automationid="toast-example"
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  <span>
    Content
  </span>
</div>
`;

exports[`XUIToast should render hidden 1`] = `
<div
  aria-hidden={true}
  className="xui-toast xui-toast-is-hidden xui-toast-layout"
  data-automationid={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  Toast Content
</div>
`;

exports[`XUIToast should render one message as a prop, one action as a prop 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  data-automationid={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  <p
    className="xui-toast--message"
    data-automationid={undefined}
  >
    Content
  </p>
  <div
    className="xui-actions xui-toast--actions"
    data-automationid={undefined}
  >
    <a
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      data-automationid={undefined}
      disabled={false}
      href="javascript:void(0)"
      onClick={[Function]}
      onKeyDown={undefined}
      onKeyPress={[Function]}
      rel={undefined}
      role="button"
      tabIndex={0}
      target={undefined}
    >
      Action ONE
    </a>
  </div>
</div>
`;

exports[`XUIToast should render two actions as a prop, but not more than two 1`] = `null`;

exports[`XUIToast should render using the XUIActions component under the hood when using the top level primaryActions and secondaryActions API 1`] = `null`;

exports[`XUIToast should still be able to render actions as children, along with message props 1`] = `null`;

exports[`XUIToast should still be able to render messages as children, along with action props 1`] = `null`;
